# agentbox

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  smoke_progress.py
docs/: design.md  internals.md
src/agentbox/: __init__.py  _shared.py  cli.py  doctor.py
src/agentbox/progress/: _render.py  claude.py  pi.py
src/agentbox/proxy/: __main__.py  allowlist.yaml  dangerous_operations.py  filter.py  github_policy.yaml  graphql_operations.py  graphql_scope.py  handlers.py  mock_llm.py  node_id.py
src/agentbox/sandbox/: Dockerfile  bashrc
src/agentbox/sandbox/proxy/: Dockerfile  dns.py  entrypoint.py
tests/: test_cli_config.py  test_cli_image.py  test_dangerous_operations.py  test_doctor.py  test_e2e_mock.py  test_filter.py  test_github_remote.py  test_graphql_operations.py  test_graphql_scope.py  test_handlers.py  test_mock_llm.py  test_network_mode.py  test_node_id.py  test_path_mapping.py  test_workdir_override.py
tests/fixtures/mock_scripts/: claude_simple.py  pi_simple.py
